Edited styling for larger screens and spelling corrections.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -63,7 +63,7 @@
 				<img class="top-img" src="../images/m86_2.jpg" onclick="toggleImage(0)" alt="M86 main">
 				<img src="../images/m86_rg2.jpg" alt="M86 H-alpha">
 			</div>
-			<p class="center"> Click on the image to reveal H-alpha filaments. </p>
+			<p class="center comment"> Click on the image to reveal H-alpha filaments. </p>
 			<!-- Paragraph below image -->
 			<p>
 				In the H-alpha image, the red color is lower velocity H-alpha emission (-600 to +400 km/s), which covers the velocity range
@@ -75,7 +75,7 @@
 			<div class="grid-item-img third-width center">
 				<img src="../images/m86+ngc4438-3panel-large-fg2.jpeg" onclick="openModal(0);currentImg(0, 1)" alt="M86 3-pannel">
 			</div>
-			<p class="center comment">Clik to enlarge image.</p>
+			<p class="center comment">Click to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-0">
 				<!-- Close button -->
@@ -122,7 +122,7 @@
 				<span class="display-left" onclick="changeSlide(-1, 1)">&#10094;</span>
 				<span class="display-right" onclick="changeSlide(+1, 1)">&#10095;</span>
 			</div>
-			<p class="center comment">Clik to enlarge image.</p>
+			<p class="center comment">Click to enlarge image.</p>
 			<!-- Popup (modal) image on click (hidden) -->
 			<div id="modal-1">
 				<!-- Close button -->
@@ -189,7 +189,7 @@
 				<span class="display-left" onclick="changeSlide(-1, 2)">&#10094;</span>
 				<span class="display-right" onclick="changeSlide(+1, 2)">&#10095;</span>
 			</div>
-			<p class="center comment">Clik to enlarge image.</p>
+			<p class="center comment">Click to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-2">
 				<!-- Close button -->
@@ -301,7 +301,7 @@
 				<span class="display-left" onclick="changeSlide(-1, 4)">&#10094;</span>
 				<span class="display-right" onclick="changeSlide(+1, 4)">&#10095;</span>
 			</div>
-			<p class="center comment">Clik to enlarge image.</p>
+			<p class="center comment">Click to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-4">
 				<!-- Close button -->
@@ -351,7 +351,7 @@
 				<img class="top-img" src="../images/D100_wideCrop_180702.png" onclick="toggleImage(1)" alt="D100 main">
 				<img src="../images/D100_wideCrop_Ha_180702.png" alt="D100 H-alpha">
 			</div>
-			<p> Click on the image to reveal H-alpha filaments. </p>
+			<p class="center comment"> Click on the image to reveal H-alpha filaments. </p>
 			<!-- Images for IC 3418 -->
 			<div class="scroll-container">
 				<div class="grid-item-img third-width center">
@@ -362,7 +362,7 @@
 				<span class="display-left" onclick="changeSlide(-1, 5)">&#10094;</span>
 				<span class="display-right" onclick="changeSlide(+1, 5)">&#10095;</span>
 			</div>
-			<p class="center comment">Clik to enlarge image.</p>
+			<p class="center comment">Click to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-5">
 				<!-- Close button and left / right nav -->
