Fixed modal descriptions.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -86,7 +86,6 @@
 				<!-- Modal Images -->
 				<div class="modal-content-0">
 					<img src="../images/m86+ngc4438-3panel-large-fg2.jpeg" alt="M86 3-pannel">
-					<p> desription. </p>
 				</div>
 			</div>
 		</section>
@@ -150,11 +149,11 @@
 				</div>
 				<div class="modal-content-1">
 					<img src="../images/ngc4921-fig3.jpg" alt="NGC 4291 dust front">
-					<p> Super zoom-ins on the galaxies dust filaments. </p>
+					<p> Super zoom-ins on the galaxy's dust filaments. </p>
 				</div>
 				<div class="modal-content-1">
 					<img src="../images/ngc4921-fig4.jpg" alt="NGC 4291 dust front">
-					<p> Super zoom-ins on the galaxies dust filaments </p>
+					<p> Super zoom-ins on the galaxy's dust filaments </p>
 				</div>
 				<div class="modal-content-1">
 					<img src="../images/ngc4921-filament-decoupling-Bfields-cartoon.jpg" alt="NGC 4291 decoupling magnetic fields cartoon">
@@ -200,23 +199,18 @@
 				<!-- Modal Images -->
 				<div class="modal-content-2">
 					<img src="../images/ngc4522-HI+Roptical.gif" alt="NGC 4522 HI">
-					<p> desription. </p>
 				</div>
 				<div class="modal-content-2">
 					<img src="../images/n4522-kk99-ha+r-3panel.gif" alt="NGC 4522 H-alpha + R 3-panel">
-					<p> desription. </p>
 				</div>
 				<div class="modal-content-2">
 					<img src="../images/n4522-hstimage-colombari-right-orientation.jpg" alt="NGC 4522 HST">
-					<p> desription. </p>
 				</div>
 				<div class="modal-content-2">
 					<img src="../images/n4522-hst-color-nolabel-bigger.jpg" alt="NGC 4522 HST color no labels">
-					<p> desription. </p>
 				</div>
 				<div class="modal-content-2">
 					<img src="../images/4522-structures-labelled.jpg" alt="NGC 4522 structures labelled">
-					<p> desription. </p>
 				</div>
 			</div>
 		</section>
@@ -259,19 +253,18 @@
 				<!-- Modal Images -->
 				<div class="modal-content-3">
 					<img src="../images/n4402-hst-full-nolabel-color-bigger.jpg" alt="NGC 4402 HST full color">
-					<p> description. </p>
+					<p> Hubble Space Telescope image of NGC 4402. </p>
 				</div>
 				<div class="modal-content-3">
 					<img src="../images/n4402-hst-labelled-rps-features.jpg" alt="NGC 4402 HST features labelled">
-					<p> description. </p>
+					<p> Annotated Hubble Space Telescope image of NGC 4402. </p>
 				</div>
 				<div class="modal-content-3">
 					<img src="../images/ngc4402-hst-east-filament.jpg" alt="NGC 4402 HST east filament">
-					<p> description. </p>
+					<p> Zoom in on NGC 4402 East Filament </p>
 				</div>
 				<div class="modal-content-3">
 					<img src="../images/ngc4402-hst-3filaments.jpg" alt="NGC HST 3 filaments">
-					<p> description. </p>
 				</div>
 			</div>
 		</section>
@@ -312,19 +305,15 @@
 				<!-- Modal Images -->
 				<div class="modal-content-4">
 					<img src="../images/IC_3418_UV+opt.jpg" alt="IC 3418 UV and opical">
-					<p> description. </p>
 				</div>
 				<div class="modal-content-4">
 					<img src="../images/ic3418-in-virgo.PNG" alt="IC 3418 in Virgo Cluster">
-					<p> description. </p>
 				</div>
 				<div class="modal-content-4">
 					<img src="../images/ic3418-Halpha+NUV-fireballs.jpg" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
-					<p> description. </p>
 				</div>
 				<div class="modal-content-4">
 					<img src="../images/ic3418-fireball-cartoon.gif" alt="IC 3418 fireball cartoon">
-					<p> description. </p>
 				</div>
 			</div>
 		</section>
@@ -372,11 +361,9 @@
 				<!-- Modal Images -->
 				<div class="modal-content-5">
 					<img src="../images/d100_dust_tail.png" alt="D100 dust tail">
-					<p> description. </p>
 				</div>
 				<div class="modal-content-5">
 					<img src="../images/d100+d99+dwarf-sub.jpg" alt="D100 dwarf sub-focus">
-					<p> description. </p>
 				</div>
 			</div>
 		</section>
