Further styling for larger displays. Almost final?

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" type="text/css" media="screen and (max-device-width:500px)" href="../css/media-500.css">
     <link rel="stylesheet" type="text/css" media="screen and (min-device-width:501px) and (max-width:800px)" href="../css/media-500-800.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width:900px)" href="../css/media-large.css">
 
     <!-- Scripts -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
@@ -112,7 +113,7 @@
         <div class="grid-container">
             <div class="grid-item-txt center">
                 <h4>
-                    <em> Physical and Express Mail </em>
+                    <em> Physical and Express Mail: </em>
                 </h4>
                 <p>Jeff Kenney</p>
                 <p>Department of Astronomy</p>
@@ -123,7 +124,7 @@
             </div>
             <div class="grid-item-txt center">
                 <h4>
-                    <em> Mailing Address </em>
+                    <em> Mailing Address: </em>
                 </h4>
                 <p>Jeff Kenney</p>
                 <p>Department of Astronomy</p>
