--- a/pages/projects.html
+++ b/pages/projects.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="stylesheet" type="text/css" media="screen and (max-device-width:500px)" href="../css/media-500.css">
 	<link rel="stylesheet" type="text/css" media="screen and (min-device-width:501px) and (max-width:800px)" href="../css/media-500-800.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width:900px)" href="../css/media-large.css">
 
 	<!-- Scripts -->
 	<script type="text/javascript" src="../scripts/script.js"></script>
@@ -72,7 +73,7 @@
 				Cluster.
 			</p>
 			<!-- Additional Images for M86 -->
-			<div class="grid-item-img third-width center">
+			<div class="grid-item-img width-limit center">
 				<img src="../images/m86+ngc4438-3panel-large-fg2.jpeg" onclick="openModal(0);currentImg(0, 1)" alt="M86 3-pannel">
 			</div>
 			<p class="center comment">Click to enlarge image.</p>
@@ -107,7 +108,7 @@
 			</div>
 			<!-- Container for scroll images -->
 			<div class="scroll-container">
-				<div class="grid-item-img third-width center">
+				<div class="grid-item-img width-limit center">
 					<!-- Onclick opens the modal box (larger images) on click - arguement corresponds to the project id  -->
 					<!-- Current image arguements - ID of the current image, modal of the project to open -->
 					<img class="scroll-item-image-1 show-img" src="../images/ngc4921-color-hi-medium.jpg" onclick="openModal(1);currentImg(2, 1)" alt="NGC 4291 HI labeled">
@@ -177,7 +178,7 @@
 			</div>
 			<!-- Images for NGC 4522 -->
 			<div class="scroll-container">
-				<div class="grid-item-img third-width center">
+				<div class="grid-item-img width-limit center">
 					<img class="scroll-item-image-2 show-img" src="../images/ngc4522-HI+Roptical.gif" onclick="openModal(2);currentImg(1, 2)" alt="NGC 4522 HI">
 					<img class="scroll-item-image-2" src="../images/n4522-kk99-ha+r-3panel.gif" onclick="openModal(2);currentImg(2, 2)" alt="NGC 4522 H-alpha + R 3-panel">
 					<img class="scroll-item-image-2" src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3, 2)" alt="NGC 4522 HST">
@@ -232,7 +233,7 @@
 			</div>
 			<!-- Images for NGC 4402 -->
 			<div class="scroll-container">
-				<div class="grid-item-img third-width center">
+				<div class="grid-item-img width-limit center">
 					<img class="scroll-item-image-3 show-img" src="../images/n4402-hst-full-nolabel-color-bigger.jpg" onclick="openModal(3);currentImg(1, 3)" alt="NGC 4402 HST full color">
 					<img class="scroll-item-image-3" src="../images/n4402-hst-labelled-rps-features.jpg" onclick="openModal(3);currentImg(2, 3)" alt="NGC 4402 HST features labelled">
 					<img class="scroll-item-image-3" src="../images/ngc4402-hst-east-filament.jpg" onclick="openModal(3);currentImg(3, 3)" alt="NGC 4402 HST east filament">
@@ -284,7 +285,7 @@
 			</div>
 			<!-- Images for IC 3418 -->
 			<div class="scroll-container">
-				<div class="grid-item-img third-width center">
+				<div class="grid-item-img width-limit center">
 					<img class="scroll-item-image-4 show-img" src="../images/IC_3418_UV+opt.jpg" onclick="openModal(4);currentImg(1, 4)" alt="IC 3418 UV and opical">
 					<img class="scroll-item-image-4" src="../images/ic3418-in-virgo.PNG" onclick="openModal(4);currentImg(2, 4)" alt="IC 3418 in Virgo Cluster">
 					<img class="scroll-item-image-4" src="../images/ic3418-Halpha+NUV-fireballs.jpg" onclick="openModal(4);currentImg(3, 4)" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
@@ -343,7 +344,7 @@
 			<p class="center comment"> Click on the image to reveal H-alpha filaments. </p>
 			<!-- Images for IC 3418 -->
 			<div class="scroll-container">
-				<div class="grid-item-img third-width center">
+				<div class="grid-item-img width-limit center">
 					<img class="scroll-item-image-5 show-img" src="../images/d100_dust_tail.png" onclick="openModal(5);currentImg(1, 5)" alt="D100 dust tail">
 					<img class="scroll-item-image-5" src="../images/d100+d99+dwarf-sub.jpg" onclick="openModal(5);currentImg(2, 5)" alt="D100 dwarf sub-focus">
 				</div>
@@ -380,7 +381,7 @@
 		<div class="grid-container">
 			<div class="grid-item-txt center">
 				<h4>
-					<em> Physical and Express Mail </em>
+					<em> Physical and Express Mail: </em>
 				</h4>
 				<p>Jeff Kenney</p>
 				<p>Department of Astronomy</p>
@@ -391,7 +392,7 @@
 			</div>
 			<div class="grid-item-txt center">
 				<h4>
-					<em> Mailing Address </em>
+					<em> Mailing Address: </em>
 				</h4>
 				<p>Jeff Kenney</p>
 				<p>Department of Astronomy</p>
