--- a/pages/publications.html
+++ b/pages/publications.html
@@ -14,7 +14,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="stylesheet" type="text/css" media="screen and (max-device-width:500px)" href="../css/media-500.css">
-	<link rel="stylesheet" type="text/css" media="screen and (min-device-width:501px) and (max-width:800px)" href="../css/media-500-800.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width:501px) and (max-width:800px)" href="../css/media-500-800.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width:900px)" href="../css/media-large.css">    
 
     <!-- Scripts -->
     <script type="text/javascript" src="../scripts/script.js"></script>
@@ -73,7 +74,7 @@
         <div class="grid-container">
             <div class="grid-item-txt center">
                 <h4>
-                    <em> Physical and Express Mail </em>
+                    <em> Physical and Express Mail: </em>
                 </h4>
                 <p>Jeff Kenney</p>
                 <p>Department of Astronomy</p>
@@ -84,7 +85,7 @@
             </div>
             <div class="grid-item-txt center">
                 <h4>
-                    <em> Mailing Address </em>
+                    <em> Mailing Address: </em>
                 </h4>
                 <p>Jeff Kenney</p>
                 <p>Department of Astronomy</p>
