Image aspect ratio editing.

--- a/pages/index.html
+++ b/pages/index.html
@@ -84,7 +84,7 @@
             <!-- ASTR 310 -->
             <h3>
                 <a target="_blank" href="http://www.astro.yale.edu/astro310">
-                    Astronomy 310: Galactic and Extragalactic Cosmology
+                    Astronomy 310: Galactic and Extragalactic Astronomy
                 </a>
             </h3>
             <p> The structure of the Milky Way galaxy and other galaxies; stellar populations and star clusters in galaxies;
