--- a/pages/projects.html
+++ b/pages/projects.html
@@ -73,7 +73,7 @@
 				Cluster.
 			</p>
 			<!-- Additional Images for M86 -->
-			<div class="grid-item-img width-limit center">
+			<div class="width-limit center">
 				<img src="../images/m86+ngc4438-3panel-large-fg2.jpeg" onclick="openModal(0);currentImg(0, 1)" alt="M86 3-pannel">
 			</div>
 			<p class="center comment">Click to enlarge image.</p>
